k8s/mediaserver/meal-plan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meal-plan
  namespace: mediaserver
spec:
  ingressClassName: nginx
  rules:
    - host: "personal.enricoruggieri.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: meal-plan-service
                port:
                  number: 80
